Fix non-MD download shelf layout broken under RTL.

RTL isn't planning to launch without MD downloads, but the non-MD shelf
still shouldn't be broken under RTL. This change makes sure to only do
RTL transformations for MD downloads.

Bug: 800302
Change-Id: I16913eb0d766f8b34a280cf7e62b0b554feef5ff
Reviewed-on: https://chromium-review.googlesource.com/882822
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531512}
Former-commit-id: 945625ed5f17d1bef1cb0850dbc733f95a5a3c83